@@ -102,3 +102,4 @@ v2.0 7/7/2014
  - Some layout/css fixes
  - Converted layout/themes to use sass templating
  - Added motherboard detection for Linux
+ - Made hwmon Linux parsing more intricate and work on newer kernels
